--- a/lessons/thw-python/flow-control/python_flow_control.ipynb
+++ b/lessons/thw-python/flow-control/python_flow_control.ipynb
@@ -437,7 +437,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "`range()` returns a list of integers from 0 to 5.  "
+      "`range(6)` returns a list of integers from 0 to 5.  "
      ]
     },
     {
@@ -456,7 +456,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Since `range()` returns a list, we can use it to count from 0 to `len(fruits)-1`, and use these numbers to access the contents of the list `fruits`.   This loop prints both the items and their indexes."
+      "Since `range` returns a list, we can use it to count from 0 to `len(fruits)-1`, and use these numbers to access the contents of the list `fruits`.   This loop prints both the items and their indexes."
      ]
     },
     {
@@ -475,7 +475,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "`zip()` is a function that takes two lists and returns a list of tuples.  "
+      "`zip` is a function that takes two lists and returns a list of tuples.  "
      ]
     },
     {
