--- a/lessons/thw-python/functions-modules/python_functions_and_modules.ipynb
+++ b/lessons/thw-python/functions-modules/python_functions_and_modules.ipynb
@@ -18,7 +18,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Materials by: [John Blischak](https://github.com/jdblischak \"GitHub\") and other Software Carpentry instructors (Joshua R. Smith, Milad Tonged, Katy Huff, Tommy Guy and many more)"
+      "Materials by: John Blischak and other Software Carpentry instructors (Joshua R. Smith, Milad Fatenejad, Katy Huff, Tommy Guy and many more)"
      ]
     },
     {
