--- a/lessons/thw-python/vars-types/variables.ipynb
+++ b/lessons/thw-python/vars-types/variables.ipynb
@@ -287,7 +287,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "There's a method that looks important -- `swapcase()`.  Let's see what it does:  "
+      "There's a method that looks important -- `.swapcase()`.  Let's see what it does:  "
      ]
     },
     {
@@ -755,7 +755,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "resistance_string = \"4.2 ohms\""
+      "resistance_string = \"4.2 Ohms\""
      ],
      "language": "python",
      "metadata": {},
