Added hint illustrating modulo operator

--- a/lessons/thw-python/flow-control/python_flow_control.ipynb
+++ b/lessons/thw-python/flow-control/python_flow_control.ipynb
@@ -341,13 +341,31 @@
      "metadata": {},
      "source": [
       "## Exercise\n",
-      "Write an if statement that prints whether x is even or odd."
+      "Write an if statement that prints whether x is even or odd.  \n",
+      "\n",
+      "Hint:  % is the **modular division operator**.  `a % b` returns the remainder after a is divided by b: "
      ]
     },
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "print 3 % 2 \n",
+      "print 4 % 2\n",
+      "print 5 % 2\n",
+      "print 6 % 2"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "print x\n",
+      "#  Your code goes here"
+     ],
      "language": "python",
      "metadata": {},
      "outputs": []
