Changed order of exercise, coersion paragraph

--- a/lessons/thw-python/vars-types/variables.ipynb
+++ b/lessons/thw-python/vars-types/variables.ipynb
@@ -597,61 +597,6 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "## Exercise\n",
-      "\n",
-      "Assign three variables, called `versionnumber`, `numberofpythons`, and `thenumberten` with the values 2, 6, and \"ten\" with the types float, int, and string respectively."
-     ]
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [],
-     "language": "python",
-     "metadata": {},
-     "outputs": []
-    },
-    {
-     "cell_type": "markdown",
-     "metadata": {},
-     "source": [
-      "This cell prints the values, so you can check if the values are what you expect:"
-     ]
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "print versionnumber\n",
-      "print numberofpythons\n",
-      "print thenumberten"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": []
-    },
-    {
-     "cell_type": "markdown",
-     "metadata": {},
-     "source": [
-      "Test your work.  Run the following three expressions.  If all three evaluate as `True` you have set the data types correctly."
-     ]
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "print type(versionnumber) == float\n",
-      "print type(numberofpythons) == int\n",
-      "print type(thenumberten) == str"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": []
-    },
-    {
-     "cell_type": "markdown",
-     "metadata": {},
-     "source": [
       "## Coersion\n",
       "\n",
       "It is possible to coerce (a fancy and slightly menacing way to say \"convert\") certain types of data to other types. For example, its pretty straightforward to coerce numerical data to strings."
@@ -765,7 +710,68 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Do you think you can coerce that string to a numerical type?\n",
+      "Do you think you can coerce that string to a numerical type?"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "## Exercise\n",
+      "\n",
+      "Assign three variables, called `versionnumber`, `numberofpythons`, and `thenumberten` with the values 2, 6, and \"ten\" with the types float, int, and string respectively."
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "This cell prints the values, so you can check if the values are what you expect:"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "print versionnumber\n",
+      "print numberofpythons\n",
+      "print thenumberten"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "Test your work.  Run the following three expressions.  If all three evaluate as `True` you have set the data types correctly."
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "print type(versionnumber) == float\n",
+      "print type(numberofpythons) == int\n",
+      "print type(thenumberten) == str"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
       "## On Being Precise with floats and ints\n",
       "Let's say you had some voltage data that looks like the following\n",
       "\n",
