@wltrimbl's suggested fixes

--- a/lessons/swc-shell/shell-filedir.ipynb
+++ b/lessons/swc-shell/shell-filedir.ipynb
@@ -93,7 +93,7 @@
       "> it's called `super_important.xlsx`\n",
       "\n",
       "The folders and documents you've just described are what the UNIX shell calls\n",
-      "'directories' and 'files' respectivly, and the collection of all of them is \n",
+      "'directories' and 'files' respectively, and the collection of all of them is \n",
       "your 'file system'. The series of pointing and clicking you gave your coworker \n",
       "also has a name: the 'path', your words led them down the path to your file. \n",
       "\n",
@@ -398,7 +398,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "However, this won't get us anywhere! This is because the shell is case sensitive, so it thinks `grant_Proposal/` and `grant_proposal/` are completely different things! If we tab complete, this is easy to avoid, because when we type \"g\" and tab complete, the shell fills in the capital letters appropriatly."
+      "However, this won't get us anywhere! This is because the shell is case sensitive, so it thinks `grant_Proposal/` and `grant_proposal/` are completely different things! If we tab complete, this is easy to avoid, because when we type \"g\" and tab complete, the shell fills in the capital letters appropriately."
      ]
     },
     {
@@ -433,7 +433,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Why? Because the shell interpretes spaces as special characters, in this case, as the delimiters for command modifiers. It thinks you want to \"cd\" to \"home\" with the \"pictures/\" option, but `cd` doesn't have a pictures option, so it errors. This illustrates two important points: first, use tab complete as much as possible, and second, try to avoid spaces in file and directory names. To correctly change to the `home pictures` directory, we need to tell the shell that this particular space is not a special character, but is instead part of the file name. We do this by \"escaping\" out the space, which looks like this:"
+      "Why? Because the shell interprets spaces as special characters, in this case, as the delimiters for command modifiers. It thinks you want to \"cd\" to \"home\" with the \"pictures/\" option, but `cd` doesn't have a pictures option, so it errors. This illustrates two important points: first, use tab complete as much as possible, and second, try to avoid spaces in file and directory names. To correctly change to the `home pictures` directory, we need to tell the shell that this particular space is not a special character, but is instead part of the file name. We do this by \"escaping\" out the space, which looks like this:"
      ]
     },
     {
@@ -530,7 +530,7 @@
      "source": [
       "### *Windows*\n",
       "\n",
-      "Everything we have seen so far works on Unix and its descendents, such\n",
+      "Everything we have seen so far works on Unix and its descendants, such\n",
       "as Linux and Mac OS X. Things are a bit different on Windows. A typical\n",
       "directory path on a Windows machine might be `C:\\Users\\vlad`. The\n",
       "first part, `C:`, is a [drive letter](glossary.html#drive-letter) that\n",
@@ -595,7 +595,7 @@
       "was when she found herself creating a directory called\n",
       "`revised-revised-results-3`.)\n",
       "\n",
-      "Each of her physical samples is labelled according to her lab's\n",
+      "Each of her physical samples is labeled according to her lab's\n",
       "convention with a unique ten-character ID, such as \"NENE01729A\". This is\n",
       "what she used in her collection log to record the location, time, depth,\n",
       "and other characteristics of the sample, so she decides to use it as\n",
@@ -611,7 +611,9 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "    $ ls north-pacific-gyre/2012-07-03/"
+      "```\n",
+      "ls north-pacific-gyre/2012-07-03/\n",
+      "```"
      ]
     },
     {
@@ -625,7 +627,9 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "    $ ls no"
+      "```\n",
+      "ls no\n",
+      "```"
      ]
     },
     {
@@ -639,7 +643,9 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "    $ ls north-pacific-gyre/"
+      "```\n",
+      "ls north-pacific-gyre/\n",
+      "```"
      ]
     },
     {
