--- a/lessons/misc-python/Vectorization1.ipynb
+++ b/lessons/misc-python/Vectorization1.ipynb
@@ -27,6 +27,26 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
+      "%pylab"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "Using matplotlib backend: MacOSX\n",
+        "Populating the interactive namespace from numpy and matplotlib\n"
+       ]
+      }
+     ],
+     "prompt_number": 1
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
       "# using a for loop and appending to an empty vector\n",
       "squares1 = []\n",
       "for x in range(1, 11):\n",
@@ -129,6 +149,8 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
+      "import numpy as np\n",
+      "\n",
       "# first let's repeat the above examples in numpy with vectorization.\n",
       "xs = np.arange(1,11)\n",
       "squares = xs**2\n",
@@ -153,7 +175,7 @@
        "stream": "stdout",
        "text": [
         "squares in numpy =  [  1   4   9  16  25  36  49  64  81 100]\n",
-        "100000 loops, best of 3: 11.1 \u00b5s per loop"
+        "100000 loops, best of 3: 11.4 \u00b5s per loop"
        ]
       },
       {
@@ -161,7 +183,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "100000 loops, best of 3: 2.59 \u00b5s per loop"
+        "100000 loops, best of 3: 2.56 \u00b5s per loop"
        ]
       },
       {
@@ -171,7 +193,7 @@
         "\n",
         "\n",
         "Squaring a vector with 1000 entries\n",
-        "1000 loops, best of 3: 690 \u00b5s per loop"
+        "1000 loops, best of 3: 785 \u00b5s per loop"
        ]
       },
       {
@@ -179,7 +201,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "100000 loops, best of 3: 3.72 \u00b5s per loop"
+        "100000 loops, best of 3: 3.6 \u00b5s per loop"
        ]
       },
       {
@@ -190,7 +212,7 @@
        ]
       }
      ],
-     "prompt_number": 3
+     "prompt_number": 9
     },
     {
      "cell_type": "code",
@@ -220,7 +242,7 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "1000 loops, best of 3: 1.1 ms per loop\n",
+        "1000 loops, best of 3: 1.07 ms per loop\n",
         "100000 loops, best of 3: 3.74 \u00b5s per loop"
        ]
       },
@@ -232,7 +254,7 @@
        ]
       }
      ],
-     "prompt_number": 4
+     "prompt_number": 10
     },
     {
      "cell_type": "markdown",
@@ -319,8 +341,8 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "10000 loops, best of 3: 33.2 \u00b5s per loop\n",
-        "100000 loops, best of 3: 10.9 \u00b5s per loop"
+        "10000 loops, best of 3: 33.8 \u00b5s per loop\n",
+        "100000 loops, best of 3: 10.7 \u00b5s per loop"
        ]
       },
       {
@@ -352,14 +374,14 @@
       "%timeit\n",
       "rs = []\n",
       "for r in np.arange(n):\n",
-      "    if rand() < threshold:\n",
+      "    if np.random.rand() < threshold:\n",
       "       rs.append(r)\n",
       "        \n",
       "        \n",
-      "%timeit [r for r in np.arange(n) if rand() < threshold]\n",
+      "%timeit [r for r in np.arange(n) if np.random.rand() < threshold]\n",
       "\n",
       "# fast vector operation\n",
-      "%timeit np.arange(n)[rand(n) < threshold]"
+      "%timeit np.arange(n)[np.random.rand(n) < threshold]"
      ],
      "language": "python",
      "metadata": {
@@ -372,8 +394,8 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "1000 loops, best of 3: 405 \u00b5s per loop\n",
-        "10000 loops, best of 3: 32.6 \u00b5s per loop"
+        "1000 loops, best of 3: 531 \u00b5s per loop\n",
+        "10000 loops, best of 3: 32.9 \u00b5s per loop"
        ]
       },
       {
