--- a/lessons/misc-python/Vectorization2.ipynb
+++ b/lessons/misc-python/Vectorization2.ipynb
@@ -25,6 +25,28 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
+      "%pylab"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "Using matplotlib backend: MacOSX\n",
+        "Populating the interactive namespace from numpy and matplotlib\n"
+       ]
+      }
+     ],
+     "prompt_number": 1
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "import numpy as np\n",
+      "\n",
       "# We start with the idea of shifting indices to facilitate certain vectorized operations.\n",
       "\n",
       "xs = np.arange(10)\n",
