fixed Will Trimble attribution

--- a/lessons/thw-python/strings-io/tutorial.ipynb
+++ b/lessons/thw-python/strings-io/tutorial.ipynb
@@ -13,7 +13,7 @@
      "source": [
       "# Strings\n",
       "\n",
-      "**Authors: Tommy Guy, Anthony Scopatz, Will Scopatz, Leszek Tarkowski**\n",
+      "**Authors: Tommy Guy, Anthony Scopatz, Will Trimble, Leszek Tarkowski**\n",
       "\n",
       "Lesson goals:\n",
       "\n",
