some suggested fixes to the thw-python vars-types exercises

--- a/lessons/thw-python/vars-types/exercises.ipynb
+++ b/lessons/thw-python/vars-types/exercises.ipynb
@@ -244,7 +244,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "What is the default data type of a after the conversion?"
+      "numpy requires that all of the elements in its array are *homogeneous*, that is, they have to have the same type.  What is the default data type of a after the conversion?"
      ]
     },
     {
@@ -261,7 +261,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Ack! The results of type() do not betray the representation.  For that we need "
+      "Ack! The results of type() do not portray the representation.  For that we need "
      ]
     },
     {
