--- a/lessons/misc-r/full-R-bootcamp/R-basics/01-basics-of-R.Rmd
+++ b/lessons/misc-r/full-R-bootcamp/R-basics/01-basics-of-R.Rmd
@@ -61,7 +61,7 @@ Use `#` signs to comment. Comment liberally in your R scripts. Anything to the r
 
 ```{R, eval = FALSE}
 Use `old.packages()` to keep track of what's out of date.  
-`update.packages()` - with package name will update a single package. Otherwise it will update all interactively. This can take a while if you haven't done it recently. To update everything without any user intervention, use the `ask = F` argument.
+`update.packages()` - with package name will update a single package. Otherwise it will update all interactively. This can take a while if you haven't done it recently. To update everything without any user intervention, use the `ask = FALSE` argument.
 update.packages(ask = FALSE)
 ```
 
