--- a/lessons/misc-r/full-R-bootcamp/R-basics/01-basics-of-R.Rmd
+++ b/lessons/misc-r/full-R-bootcamp/R-basics/01-basics-of-R.Rmd
@@ -3,7 +3,7 @@
 R is a versatile, open source programming/scripting language that's useful both for statistics but also data science. Inspired by `S`.
 
 * Open source software under GPL
-* Superior (if not just comparable) to commercial alternatives
+* Superior (if not just comparable) to commercial alternatives. R has over 5,000 user contributed packages at this time. It's widely used both in academia and industry.
 * Available on all platforms
 * Not just for statistics, but also general purpose programming
 * Is object oriented and functional
