--- a/lessons/misc-r/full-R-bootcamp/R-basics/01-basics-of-R.Rmd
+++ b/lessons/misc-r/full-R-bootcamp/R-basics/01-basics-of-R.Rmd
@@ -2,12 +2,12 @@
 
 R is a versatile, open source programming/scripting language that's useful both for statistics but also data science. Inspired by `S`.
 
-* Open source software under GPL
+* Open source software under GPL.
 * Superior (if not just comparable) to commercial alternatives. R has over 5,000 user contributed packages at this time. It's widely used both in academia and industry.
-* Available on all platforms
-* Not just for statistics, but also general purpose programming
-* Is object oriented and functional
-* Large and growing community of peers
+* Available on all platforms.
+* Not just for statistics, but also general purpose programming.
+* Is object oriented and functional.
+* Large and growing community of peers.
 
 **How to run `R`**  
 
@@ -26,7 +26,7 @@ You can also script inline using `Rscript -e`. *Example*
 
 ```{R, eval = FALSE}
 Rscript -e "library(knitr); knit('script.Rmd')"
-# Notice how I used a semi-colon to separate multiple commands in a single line
+# Notice how we use a semi-colon to separate multiple commands in a single line
 ```
 
 **Viewing objects in your global environment and how to clean them up**
@@ -39,7 +39,7 @@ ls()
 
 remove objects from your current environment
 
-```{R}
+```{r, eval = TRUE, echo = TRUE}
 x <- 5
 rm(x)
 x
@@ -50,8 +50,9 @@ remove all objects from your current environment
 ```{R, eval = FALSE}
 rm(list = ls())
 ```
+*Notice that we have nested one function inside another.*
 
-Use `#` signs to comment. Comment liberally in your R scripts. Anything to the right of a `#` is ignored. 
+Use `#` signs to comment. Comment liberally in your R scripts. Anything to the right of a `#` is ignored by R. 
 
 **Assignment operator**
 
@@ -59,11 +60,13 @@ Use `#` signs to comment. Comment liberally in your R scripts. Anything to the r
 
 **Package management**
 
-```{R, eval = FALSE}
-Use `old.packages()` to keep track of what's out of date.  
-`update.packages()` - with package name will update a single package. Otherwise it will update all interactively. This can take a while if you haven't done it recently. To update everything without any user intervention, use the `ask = FALSE` argument.
-update.packages(ask = FALSE)
-```
+* `install.packages("package-name")` will download a package from one of the CRAN mirrors assuming that a binary is available for your operating system. If you have not set a preferred CRAN mirror in your `options()`, then a menu will pop up asking you to choose a location.
+
+* Use `old.packages()` to list all your locally installed packages that are now out of date. 
+`update.packages()` - with package name will update a single package. Otherwise it will update all interactively. This can take a while if you haven't done it recently. To update everything without any user intervention, use the `ask = FALSE` argument.  
+
+`update.packages(ask = FALSE)`
+
 
 
 **Quitting R**
