--- a/lessons/misc-r/full-R-bootcamp/data-manipulation/00-messy_data.Rmd
+++ b/lessons/misc-r/full-R-bootcamp/data-manipulation/00-messy_data.Rmd
@@ -3,7 +3,7 @@
 
 Raw data from various ecological studies can be poorly formatted and/or may lack appropriate details of the study. Correcting data in place can be a dangerous exercise since the original raw data would get overwritten and there would be no way to audit this process or recover from mistakes made during this time. A good data practice would be to maintain the original data, but use a programmatic script to clean it, fix mistakes and save that cleaned dataset for further analysis. 
 
-![A sample workflow](assets/sample_workflow.png)
+![A sample workflow](sample_workflow.png)
 
 
 ## Tidy data
@@ -21,27 +21,28 @@ Raw data from various ecological studies can be poorly formatted and/or may lack
 ### A warm-up example
 
 
-```{r}
+```{r, eval = TRUE}
 dat = data.frame(males = c(injured = 4, uninjured = 2), females = c(injured = 1, uninjured = 5))
 dat
 ```
 
 names as a column we can manipulate
 
-```{r}
+```{r, eval = TRUE}
 dat <- cbind(dat, status = rownames(dat)) 
+dat
 ```
 
 Get values out of columns, variables as columns:
 
-```{r}
+```{r , eval = TRUE}
 library(reshape2)
 dat <- melt(dat, "status") 
 ```
 
 Add some nice metadata that was absent before:
 
-```{r}
+```{r, eval = TRUE}
 names(dat) <- c("status", "sex", "count") 
 ```
 
@@ -56,7 +57,7 @@ In the example below, we use a data file obtained as plain text and clean up inc
 ```{r, load_data}
 library(stringr)
 # If you don't have this package simply run install.packages("stringr")
-rawData <- readLines("data/messy_data.txt")
+rawData <- readLines("../data/messy_data.txt")
 ```
 
 ```{r examine_data}
@@ -147,7 +148,7 @@ Now we can confidently save these data into a separate file which w called `clea
 
 
 ```{r save_data}
-write.csv(cleaned_data, file = "data/cleaned_data.csv")
+write.csv(cleaned_data, file = "../data/cleaned_data.csv")
 ```
 
 As you can see in the `data` folder, we now have both the original untransformed raw data and also the cleaned data which is now read for further analysis. If there's ever any questions about the cleanup process, this script will provide a way to audit all the steps. The original data are always there untouched. Now you are free to proceed with the analysis and the reporting.
