--- a/lessons/misc-r/full-R-bootcamp/R-basics/01-basics-of-R.Rmd
+++ b/lessons/misc-r/full-R-bootcamp/R-basics/01-basics-of-R.Rmd
@@ -63,9 +63,11 @@ Use `#` signs to comment. Comment liberally in your R scripts. Anything to the r
 * `install.packages("package-name")` will download a package from one of the CRAN mirrors assuming that a binary is available for your operating system. If you have not set a preferred CRAN mirror in your `options()`, then a menu will pop up asking you to choose a location.
 
 * Use `old.packages()` to list all your locally installed packages that are now out of date. 
-`update.packages()` - with package name will update a single package. Otherwise it will update all interactively. This can take a while if you haven't done it recently. To update everything without any user intervention, use the `ask = FALSE` argument.  
+`update.packages()` - will update all packages in the known libraries interactively. This can take a while if you haven't done it recently. To update everything without any user intervention, use the `ask = FALSE` argument.  
 
-`update.packages(ask = FALSE)`
+```{R, eval = FALSE}
+update.packages(ask = FALSE)
+```
 
 
 
