--- a/lessons/misc-r/full-R-bootcamp/R-basics/exercise.md.Rmd
+++ b/lessons/misc-r/full-R-bootcamp/R-basics/exercise.md.Rmd
@@ -23,10 +23,10 @@ mtcars[mtcars$cyl == 4 | 6, ]
 3. Why does `mtcars[1:20]` return a error? How does it differ from the similar `mtcars[1:20, ]`?
 
 
-4. Load the `ggplot2` library. There should be a dataset called diamonds. You can verify that by typing in `data(diamonds)`
+4. Load the `ggplot2` package. There should be a dataset called `diamonds`. You can verify that by typing in `data(diamonds)`
 
 * How big is this dataset (number of rows and columns)?
-* Create a new `data.frame` called `small_diamonds` that only contains rows 1 through 9 and 19 through 23. You can do this in one or two steps.
+* Create a new data frame called `small_diamonds` that only contains rows 1 through 9 and 19 through 23. You can do this in one or two steps.
 
 5. Given a linear model
 
@@ -34,7 +34,7 @@ mtcars[mtcars$cyl == 4 | 6, ]
 mod <- lm(mpg ~ wt, data = mtcars)
 ```
 
-Extract the residual degrees of freedom. 
+extract the residual degrees of freedom.
 
 
 ----
