--- a/lessons/misc-r/full-R-bootcamp/data-manipulation/00-messy_data.Rmd
+++ b/lessons/misc-r/full-R-bootcamp/data-manipulation/00-messy_data.Rmd
@@ -15,18 +15,18 @@ Raw data from various ecological studies can be poorly formatted and/or may lack
 
 1. Values as columns  (melt to long format)
 2. Multiple values in a single cell (some regexpr to split em)
-3. variables in rows (cast)
+3. Variables in rows (cast)
 
 
 ### A warm-up example
 
 
 ```{r, eval = TRUE}
-dat = data.frame(males = c(injured = 4, uninjured = 2), females = c(injured = 1, uninjured = 5))
+dat <- data.frame(males = c(injured = 4, uninjured = 2), females = c(injured = 1, uninjured = 5))
 dat
 ```
 
-names as a column we can manipulate
+Rowames as a column we can manipulate
 
 ```{r, eval = TRUE}
 dat <- cbind(dat, status = rownames(dat)) 
@@ -36,7 +36,7 @@ dat
 Get values out of columns, variables as columns:
 
 ```{r , eval = TRUE}
-library(reshape2)
+library("reshape2")
 dat <- melt(dat, "status") 
 ```
 
@@ -55,7 +55,7 @@ names(dat) <- c("status", "sex", "count")
 In the example below, we use a data file obtained as plain text and clean up incorrect spacing, separators. Then we look up the appropriate metadata 
 
 ```{r, load_data}
-library(stringr)
+library("stringr")
 # If you don't have this package simply run install.packages("stringr")
 rawData <- readLines("../data/messy_data.txt")
 ```
@@ -69,7 +69,8 @@ We've got two issues here. First, we need to split the dates into two separate f
 
 
 ```{r clean_up}
-# First we use a function in the stringr package to locate where the dashes are. Note that we are not just searching for the dash but a string that includes the space before and after.
+# First we use a function in the stringr package to locate where the dashes are.
+# Note that we are not just searching for the dash but a string that includes the space before and after.
 dashes <- str_locate_all(rawData, " - ")
 # Let's make sure it looks right
 rawData[1]
@@ -77,7 +78,7 @@ dashes[1]
 ```
 
 ```{r functions}
-## -----------------------------------------------
+# -----------------------------------------------
 # A function to remove extra spaces and split the dates
 # -------------------------------------------
 splitByDate <- function(str, start, finish) {
@@ -89,33 +90,33 @@ splitByDate <- function(str, start, finish) {
     beginning <- str_trim(beginning)
     dates <- str_split(dates, " - ")
 
-      while(str_detect(end, "  ")) {
-    end <- str_replace_all(str_trim(end), "  ", " ")    
-  }
+    while(str_detect(end, "  ")) {
+       end <- str_replace_all(str_trim(end), "  ", " ")    
+    }
 
-  end <- str_split(end, " ")
+    end <- str_split(end, " ")
     return(c(unlist(beginning), unlist(dates), unlist(end)))
 }
 
 # A function to return a nicely formatted dataset
 # -------------------------------------------
 formatData  <- function(rawD) {
-longest_row <- max(sapply(rawD, length))
-# If any rows have missing data, we pad it with NAs so we get a clean data.frame
-results <- sapply(rawD, function(y) {
+    longest_row <- max(sapply(rawD, length))
+    # If any rows have missing data, we pad it with NAs so we get a clean data.frame
+    results <- sapply(rawD, function(y) {
         if(length(y) < longest_row)
             c(y, rep(NA, longest_row - length(y))) 
         else 
             y
     })
 
-return(as.data.frame(t(results)))
+    return(as.data.frame(t(results)))
 } 
 
 ```{r, clean_data}
 first_pass <- sapply(1:length(rawData), function(x) {
     splitByDate(rawData[x], dashes[[x]][1], dashes[[x]][2])
-    })
+})
 
 cleaned_data <- formatData(first_pass)
 names(cleaned_data) <- c("observer", "date_first", "date_last", "id", "distance", "direction", "speed", "measurex", "measurey", "migratory_status", "times_observed")
@@ -144,7 +145,7 @@ head(cleaned_data)
 tail(cleaned_data)
 ```
 
-Now we can confidently save these data into a separate file which w called `cleaned_data.csv`. In a real world use case your file name would be more descriptive.
+Now we can confidently save these data into a separate file which we called `cleaned_data.csv`. In a real world use case your file name would be more descriptive.
 
 
 ```{r save_data}
