Make is clear that this `seq()` call is using `x` as argument `along`, which won't be very clear for new users.

--- a/lessons/misc-r/full-R-bootcamp/R-basics/02-data-structures.Rmd
+++ b/lessons/misc-r/full-R-bootcamp/R-basics/02-data-structures.Rmd
@@ -419,7 +419,7 @@ Lists can also have names.
 
 ```{r, eval = TRUE}
 x <- as.list(1:10)
-names(x) <- letters[seq(x)]
+names(x) <- letters[seq(along = x)]
 x
 ```
 
