--- a/lessons/misc-r/full-R-bootcamp/R-basics/02-data-structures.Rmd
+++ b/lessons/misc-r/full-R-bootcamp/R-basics/02-data-structures.Rmd
@@ -111,7 +111,7 @@ class(z)
 str(z)
 ```
 
-Question: Do you see property that's common to all these vectors above?
+Question: Do you see a property that's common to all these vectors above?
 
 **Add elements**
 
